--- a/puppet/services/manila-api.yaml
+++ b/puppet/services/manila-api.yaml
@@ -35,9 +35,12 @@ outputs:
           - manila::api::keystone_password: {get_param: ManilaPassword}
             manila::api::keystone_auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
             manila::api::keystone_auth_host: {get_param: [EndpointMap, ManilaInternal, host]}
-            manila::keystone::auth::public_url: {get_param: [EndpointMap, ManilaPublic, uri]}
-            manila::keystone::auth::internal_url: {get_param: [EndpointMap, ManilaInternal, uri]}
-            manila::keystone::auth::admin_url: {get_param: [EndpointMap, ManilaAdmin, uri]}
+            manila::keystone::auth::public_url: {get_param: [EndpointMap, ManilaV1Public, uri]}
+            manila::keystone::auth::internal_url: {get_param: [EndpointMap, ManilaV1Internal, uri]}
+            manila::keystone::auth::admin_url: {get_param: [EndpointMap, ManilaV1Admin, uri]}
+            manila::keystone::auth::public_url_v2: {get_param: [EndpointMap, ManilaPublic, uri]}
+            manila::keystone::auth::internal_url_v2: {get_param: [EndpointMap, ManilaInternal, uri]}
+            manila::keystone::auth::admin_url_v2: {get_param: [EndpointMap, ManilaAdmin, uri]}
             manila::keystone::auth::password: {get_param: ManilaPassword }
             manila::keystone::auth::region: {get_param: KeystoneRegion }
             manila::api::keystone_tenant: 'service'
