--- a/puppet/services/nova-base.yaml
+++ b/puppet/services/nova-base.yaml
@@ -13,6 +13,10 @@ parameters:
     description: The password for the nova service and db account, used by nova-api.
     type: string
     hidden: true
+  NeutronPassword:
+    description: The password for the neutron service and db account, used by neutron agents.
+    type: string
+    hidden: true
   RabbitPassword:
     description: The password for RabbitMQ
     type: string
@@ -82,6 +86,9 @@ outputs:
         nova::network::neutron::neutron_project_name: 'service'
         nova::network::neutron::neutron_username: 'neutron'
         nova::network::neutron::dhcp_domain: ''
+        nova::network::neutron::neutron_password: {get_param: NeutronPassword}
+        nova::network::neutron::neutron_url: {get_param: [EndpointMap, NeutronInternal, uri]}
+        nova::network::neutron::neutron_auth_url: {get_param: [EndpointMap, KeystoneV3Admin, uri]}
         nova::rabbit_heartbeat_timeout_threshold: 60
         nova::cinder_catalog_info: 'volumev2:cinderv2:internalURL'
         nova::host: '"%{::fqdn}"'    # NOTE: extra quoting is needed.
