--- a/puppet/services/heat-api.yaml
+++ b/puppet/services/heat-api.yaml
@@ -35,6 +35,7 @@ outputs:
         map_merge:
           - get_attr: [HeatBase, role_data, config_settings]
           - heat::api::workers: {get_param: HeatWorkers}
+            heat::keystone::auth::tenant: 'service'
             heat::keystone::auth::public_url: {get_param: [EndpointMap, HeatPublic, uri]}
             heat::keystone::auth::internal_url: {get_param: [EndpointMap, HeatInternal, uri]}
             heat::keystone::auth::admin_url: {get_param: [EndpointMap, HeatAdmin, uri]}
