Move ceilometer api to run under apache wsgi
Depends-On: If3feb859b527d08e10c124b5ad2f7f4b1f19156a

Change-Id: I728d0980f7742aa390f11a0f0b8598d1299e2886

--- a/puppet/services/ceilometer-api.yaml
+++ b/puppet/services/ceilometer-api.yaml
@@ -47,6 +47,9 @@ outputs:
             # internal_api -> IP
             # internal_api_uri -> [IP]
             # internal_api_subnet - > IP/CIDR
+          - ceilometer::api::service_name: 'httpd'
             ceilometer::api::host: {get_param: [ServiceNetMap, CeilometerApiNetwork]}
+            ceilometer::wsgi::apache::bind_host: {get_param: [ServiceNetMap, CeilometerApiNetwork]}
+            ceilometer::wsgi::apache::ssl: false
       step_config: |
         include ::tripleo::profile::base::ceilometer::api
