--- a/puppet/services/sahara-base.yaml
+++ b/puppet/services/sahara-base.yaml
@@ -68,8 +68,8 @@ outputs:
         sahara::identity_uri: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
         sahara::use_neutron: true
         sahara::plugins:
+          - ambari
           - cdh
-          - hdp
           - mapr
           - vanilla
           - spark
