Convert ServiceNetMap to a nested template
We introduce a new ServiceNetMap resource which enables some more flexible
mappings between the services and their networks.

Specifically this patch means:

1. ServiceNetMap no longer has to specify the entire list of all services,
operators may if they wish, but a subset is now valid where you want to
accept the defaults for some services (the defaults are now accessible via
the ServiceNetMapDefaults parameter.

2. We can map some keys which don't fit a pattern that enables conversion
from CamelCase to snake_case which is required for compatibility with the
service_names in puppet/services*

This should be backwards compatible, and in future when we remove internal
dependency on the CamelCase names, we could also enable operators to
specify e.g heat_api_network in ServiceNetMap which would be more consistent.

Change-Id: Ib60198adf76bb69ffbafbfac739e356d153f6194
Partially-Implements: blueprint custom-roles

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -118,6 +118,9 @@ resource_registry:
   OS::TripleO::BlockStorage::Ports::TenantPort: network/ports/noop.yaml
   OS::TripleO::BlockStorage::Ports::ManagementPort: network/ports/noop.yaml
 
+  # Service to network Mappings
+  OS::TripleO::ServiceNetMap: network/service_net_map.yaml
+
   # Service Endpoint Mappings
   OS::TripleO::EndpointMap: network/endpoints/endpoint_map.yaml
 
