--- a/environments/updates/update-from-keystone-admin-internal-api.yaml
+++ b/environments/updates/update-from-keystone-admin-internal-api.yaml
@@ -2,10 +2,10 @@
 # Keystone Admin API service is running on the Internal API network
 
 parameter_defaults:
-  ServiceNetMap:
+  ServiceNetMapDefaults:
     NeutronTenantNetwork: tenant
     CeilometerApiNetwork: internal_api
-    MongoDbNetwork: internal_api
+    MongodbNetwork: internal_api
     CinderApiNetwork: internal_api
     CinderIscsiNetwork: storage
     GlanceApiNetwork: storage
@@ -21,7 +21,7 @@ parameter_defaults:
     SwiftProxyNetwork: storage
     HorizonNetwork: internal_api
     MemcachedNetwork: internal_api
-    RabbitMqNetwork: internal_api
+    RabbitmqNetwork: internal_api
     RedisNetwork: internal_api
     MysqlNetwork: internal_api
     CephClusterNetwork: storage_mgmt
