Add support for cinder v3 endpoint
This adds the needed parts for the keystone endpoint of cinder v3
API.

Change-Id: Ic56446095e72b9e469a7b0e9ea5159fa31847381

--- a/network/endpoints/endpoint_data.yaml
+++ b/network/endpoints/endpoint_data.yaml
@@ -34,16 +34,19 @@ Cinder:
         uri_suffixes:
             '': /v1/%(tenant_id)s
             V2: /v2/%(tenant_id)s
+            V3: /v3/%(tenant_id)s
     Public:
         vip_param: Public
         uri_suffixes:
             '': /v1/%(tenant_id)s
             V2: /v2/%(tenant_id)s
+            V3: /v3/%(tenant_id)s
     Admin:
         vip_param: CinderApi
         uri_suffixes:
             '': /v1/%(tenant_id)s
             V2: /v2/%(tenant_id)s
+            V3: /v3/%(tenant_id)s
     port: 8776
 
 Glance:
