--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -104,7 +104,7 @@ resources:
                   list_join:
                   - ','
                   - {get_param: controller_names}
-                rabbit_node_ips: &rabbit_nodes_array
+                rabbit_node_ips:
                   str_replace:
                     template: "['SERVERS_LIST']"
                     params:
@@ -112,6 +112,22 @@ resources:
                         list_join:
                         - "','"
                         - {get_param: rabbit_node_ips}
+                rabbitmq_node_ips: &rabbit_nodes_array
+                  str_replace:
+                    template: "['SERVERS_LIST']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "','"
+                        - {get_param: rabbit_node_ips}
+                mongodb_node_ips:
+                  str_replace:
+                    template: "['SERVERS_LIST']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "','"
+                        - {get_param: mongo_node_ips}
                 mongo_node_ips:
                   str_replace:
                     template: "['SERVERS_LIST']"
@@ -128,6 +144,22 @@ resources:
                         list_join:
                         - "','"
                         - {get_param: redis_node_ips}
+                memcached_node_ips:
+                  str_replace:
+                    template: "['SERVERS_LIST']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "','"
+                        - {get_param: memcache_node_ips}
+                memcached_node_ips_v6:
+                  str_replace:
+                    template: "['inet6:[SERVERS_LIST]']"
+                    params:
+                      SERVERS_LIST:
+                        list_join:
+                        - "]','inet6:["
+                        - {get_param: memcache_node_ips}
                 memcache_node_ips:
                   str_replace:
                     template: "['SERVERS_LIST']"
