--- a/puppet/services/nova-libvirt.yaml
+++ b/puppet/services/nova-libvirt.yaml
@@ -9,6 +9,9 @@ parameters:
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
     type: json
+  NovaComputeLibvirtType:
+    type: string
+    default: kvm
 
 resources:
   NovaBase:
@@ -30,5 +33,8 @@ outputs:
             nova::compute::libvirt::migration_support: false
             tripleo::profile::base::nova::manage_migration: true
             tripleo::profile::base::nova::libvirt_enabled: true
+            nova::compute::libvirt::services::libvirt_virt_type: {get_param: NovaComputeLibvirtType}
+            nova::compute::libvirt::libvirt_virt_type: {get_param: NovaComputeLibvirtType}
+
       step_config: |
         include tripleo::profile::base::nova::libvirt
