--- a/puppet/services/nova-vncproxy.yaml
+++ b/puppet/services/nova-vncproxy.yaml
@@ -25,5 +25,15 @@ outputs:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
           - nova::vncproxy::enabled: true
+            nova::vncproxy::common::vncproxy_protocol: {get_param: [EndpointMap, NovaVNCProxyPublic, protocol]}
+            # Remove brackets that may come if the IP address is IPv6.
+            # For DNS names and IPv4, this will just get NovaVNCProxyPublic
+            nova::vncproxy::common::vncproxy_host:
+              str_replace:
+                template: {get_param: [EndpointMap, NovaVNCProxyPublic, host]}
+                params:
+                  '[': ''
+                  ']': ''
+            nova::vncproxy::common::vncproxy_port: {get_param: [EndpointMap, NovaVNCProxyPublic, port]}
       step_config: |
         include tripleo::profile::base::nova::vncproxy
