Add NetApp Manila driver integration and tidy up generic
Enables configuring a NetApp backend for the Manila service
This was created based on the review at
https://review.openstack.org/#/c/188138/

This makes the netapp and generic backends disabled by default
in the services/manila-backend-*.yaml. A backend is then
enabled via backend-specific environment files, which will set
any config parameters and enable that backend.

It is expected that multiple manila backend specific environment
files might be specified simultaneously.

Finally generic and manila config is split into separate
service files rather than using manila-base for all the things.

Co-Authored-By: Ryan Hefner <rhefner@redhat.com>
Co-Authored-By: Ben Swartzlander <ben@swartzlander.org>
Closes-Bug: 1618479
Depends-On: Ic6f8e8d27ca20b9badddea5d16550aa18bff8418
Change-Id: I35fce32d0f6a5cc1c3382c2d0e0d6028928fd943

--- a/environments/manila-generic-config.yaml
+++ b/environments/manila-generic-config.yaml
@@ -1,13 +1,16 @@
-# A Heat environment file which can be used to enable a
-# a Manila generic driver backend.
+# This environment file enables Manila with the Generic backend.
 resource_registry:
   OS::Tripleo::Services::ManilaApi: ../puppet/services/manila-api.yaml
   OS::Tripleo::Services::ManilaScheduler: ../puppet/services/manila-scheduler.yaml
   # Only manila-share is pacemaker managed:
   OS::Tripleo::Services::ManilaShare: ../puppet/services/pacemaker/manila-share.yaml
-
+  OS::Tripleo::Services::ManilaBackendGeneric: ../puppet/services/manila-backend-generic.yaml
 
 parameter_defaults:
+  ManilaServiceInstanceUser: ''
+  ManilaServiceInstancePassword: ''
+  ManilaServiceInstanceFlavorId: 2
+  ManilaServiceNetworkCidr: '172.16.0.0/16'
   ManilaGenericEnableBackend: true
   ManilaGenericBackendName: tripleo_generic
   ManilaGenericDriverHandlesShareServers: true
@@ -20,7 +23,3 @@ parameter_defaults:
   ManilaGenericServiceInstanceSmbConfigPath: '$share_mount_path/smb.conf'
   ManilaGenericShareVolumeFsType: 'ext4'
   ManilaGenericCinderVolumeType: ''
-  ManilaGenericServiceInstanceUser: ''
-  ManilaGenericServiceInstancePassword: ''
-  ManilaGenericServiceInstanceFlavorId: 2
-  ManilaGenericServiceNetworkCidr: '172.16.0.0/16'
