--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -52,6 +52,8 @@
     - OS::TripleO::Services::GnocchiStatsd
     - OS::Tripleo::Services::ManilaApi
     - OS::Tripleo::Services::ManilaScheduler
+    - OS::Tripleo::Services::ManilaBackendGeneric
+    - OS::Tripleo::Services::ManilaBackendNetapp
     - OS::Tripleo::Services::ManilaShare
     - OS::TripleO::Services::AodhApi
     - OS::TripleO::Services::AodhEvaluator
