Reinstate CloudDomain properties for Controller/Compute roles
These were removed in https://review.openstack.org/#/c/347050
but it turns out the defaults in the role templates is bad, as
an empty string results in a malformed hosts file fqdn.

So, partially revert that patch so we always pass the global
CloudDomain from overcloud.yaml, accepting the default configured
there, and remove the empty-string defaults in the role templates.

Change-Id: I0ea4190a23488986a3ee9e887328e0e7a03fe3aa

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -430,6 +430,7 @@ resources:
       resource_def:
         type: OS::TripleO::Controller
         properties:
+          CloudDomain: {get_param: CloudDomain}
           controllerExtraConfig: {get_param: controllerExtraConfig}
           HeatAuthEncryptionKey: {get_resource: HeatAuthEncryptionKey}
           HorizonSecret: {get_resource: HorizonSecret}
@@ -467,6 +468,7 @@ resources:
       resource_def:
         type: OS::TripleO::Compute
         properties:
+          CloudDomain: {get_param: CloudDomain}
           GlanceHost: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, GlanceApiNetwork]}]}
           KeystoneAdminApiVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, KeystoneAdminApiNetwork]}]}
           KeystonePublicApiVirtualIP: {get_attr: [VipMap, net_ip_map, {get_param: [ServiceNetMap, KeystonePublicApiNetwork]}]}
