--- a/puppet/services/ceilometer-base.yaml
+++ b/puppet/services/ceilometer-base.yaml
@@ -35,6 +35,10 @@ parameters:
     default: false
     description: Whether to store events in ceilometer.
     type: boolean
+  Debug:
+    default: ''
+    description: Set to True to enable debugging on all services.
+    type: string
   KeystoneRegion:
     type: string
     default: 'regionOne'
@@ -64,6 +68,7 @@ outputs:
     value:
       service_name: ceilometer_base
       config_settings:
+        ceilometer::debug: {get_param: Debug}
         ceilometer::db::database_connection:
           list_join:
             - ''
@@ -111,3 +116,4 @@ outputs:
         ceilometer::rabbit_heartbeat_timeout_threshold: 60
         ceilometer::db::database_db_max_retries: -1
         ceilometer::db::database_max_retries: -1
+        ceilometer::telemetry_secret: {get_param: CeilometerMeteringSecret}
