Remove deprecated net_ip_uri_map output
Takes the net_ip_uri_map value from the *_uri values emitted
by net_ip_map instead.

Also removes TenantIp and TenantIpUri from net_vip_map_external
templates as there won't be any VIP on the tenant network.

Change-Id: Icdac3d58162891f5ca3d5c20f14fcdff1781996f

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -545,7 +545,14 @@ resources:
           str_replace:
             template: "'IP'"
             params:
-              IP: {get_attr: [NetIpMap, net_ip_uri_map, {get_param: [ServiceNetMap, CinderIscsiNetwork]}]}
+              IP:
+                get_attr:
+                  - NetIpMap
+                  - net_ip_map
+                  - str_replace:
+                      template: "NETWORK_uri"
+                      params:
+                        NETWORK: {get_param: [ServiceNetMap, CinderIscsiNetwork]}
         cinder_api_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, CinderApiNetwork]}]}
         glance_api_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, GlanceApiNetwork]}]}
         glance_registry_network: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, GlanceRegistryNetwork]}]}
@@ -651,7 +658,6 @@ resources:
             network:
               mapped_data:
                 net_ip_map: {get_attr: [NetIpMap, net_ip_map]}
-                net_ip_uri_map: {get_attr: [NetIpMap, net_ip_uri_map]}
             ceph:
               mapped_data:
                 ceph::profile::params::cluster_network: {get_input: ceph_cluster_network}
@@ -899,14 +905,28 @@ outputs:
       str_replace:
         template: 'r1z1-IP:%PORT%/d1'
         params:
-          IP: {get_attr: [NetIpMap, net_ip_uri_map, {get_param: [ServiceNetMap, SwiftMgmtNetwork]}]}
+          IP:
+            get_attr:
+              - NetIpMap
+              - net_ip_map
+              - str_replace:
+                  template: "NETWORK_uri"
+                  params:
+                    NETWORK: {get_param: [ServiceNetMap, SwiftMgmtNetwork]}
   swift_proxy_memcache:
     description: Swift proxy-memcache value
     value:
       str_replace:
         template: "IP:11211"
         params:
-          IP: {get_attr: [NetIpMap, net_ip_uri_map, {get_param: [ServiceNetMap, MemcachedNetwork]}]}
+          IP:
+            get_attr:
+              - NetIpMap
+              - net_ip_map
+              - str_replace:
+                  template: "NETWORK_uri"
+                  params:
+                    NETWORK: {get_param: [ServiceNetMap, MemcachedNetwork]}
   tls_key_modulus_md5:
     description: MD5 checksum of the TLS Key Modulus
     value: {get_attr: [NodeTLSData, key_modulus_md5]}
