--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -242,7 +242,14 @@ resources:
           str_replace:
             template: "'IP'"
             params:
-              IP: {get_attr: [NetIpMap, net_ip_uri_map, {get_param: [ServiceNetMap, CinderIscsiNetwork]}]}
+              IP:
+                get_attr:
+                  - NetIpMap
+                  - net_ip_map
+                  - str_replace:
+                      template: "NETWORK_uri"
+                      params:
+                        NETWORK: {get_param: [ServiceNetMap, CinderIscsiNetwork]}
         enable_package_install: {get_param: EnablePackageInstall}
         enable_package_upgrade: {get_attr: [UpdateDeployment, update_managed_packages]}
 
@@ -277,7 +284,6 @@ resources:
             network:
               mapped_data:
                 net_ip_map: {get_attr: [NetIpMap, net_ip_map]}
-                net_ip_uri_map: {get_attr: [NetIpMap, net_ip_uri_map]}
             volume_extraconfig:
               mapped_data: {get_param: BlockStorageExtraConfig}
             extraconfig:
