--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -264,7 +264,6 @@ resources:
             network:
               mapped_data:
                 net_ip_map: {get_attr: [NetIpMap, net_ip_map]}
-                net_ip_uri_map: {get_attr: [NetIpMap, net_ip_uri_map]}
             object_extraconfig:
               mapped_data: {get_param: ObjectStorageExtraConfig}
             extraconfig:
@@ -390,7 +389,14 @@ outputs:
       str_replace:
         template: 'r1z1-IP:%PORT%/d1'
         params:
-          IP: {get_attr: [NetIpMap, net_ip_uri_map, {get_param: [ServiceNetMap, SwiftMgmtNetwork]}]}
+          IP:
+            get_attr:
+              - NetIpMap
+              - net_ip_map
+              - str_replace:
+                  template: "NETWORK_uri"
+                  params:
+                    NETWORK: {get_param: [ServiceNetMap, SwiftMgmtNetwork]}
   external_ip_address:
     description: IP address of the server in the external network
     value: {get_attr: [ExternalPort, ip_address]}
