Set coordination url for gnocchi storage
Change-Id: I8107b84eaea8baf3ed664c70d4cf16537d869bcb

--- a/puppet/services/gnocchi-base.yaml
+++ b/puppet/services/gnocchi-base.yaml
@@ -34,6 +34,10 @@ parameters:
     type: string
     default: 'regionOne'
     description: Keystone region for endpoint
+  RedisPassword:
+    description: The password for the redis service account.
+    type: string
+    hidden: true
 
 outputs:
   aux_parameters:
@@ -69,6 +73,14 @@ outputs:
         gnocchi::api::keystone_tenant: 'service'
         gnocchi::api::keystone_password: {get_param: GnocchiPassword}
         gnocchi::wsgi::apache::ssl: false
+        gnocchi::storage::coordination_url:
+          list_join:
+            - ''
+            - - 'redis://:'
+              - {get_param: RedisPassword}
+              - '@'
+              - "%{hiera('redis_vip')}"
+              - ':6379/'
         gnocchi::storage::swift::swift_user: 'service:gnocchi'
         gnocchi::storage::swift::swift_auth_version: 2
         gnocchi::storage::swift::swift_key: {get_param: GnocchiPassword}
