--- a/puppet/services/gnocchi-api.yaml
+++ b/puppet/services/gnocchi-api.yaml
@@ -23,7 +23,7 @@ parameters:
     type: string
     hidden: true
   GnocchiBackend:
-    default: file
+    default: swift
     description: The short name of the Gnocchi backend to use. Should be one
       of swift, rbd, or file
     type: string
