Set cinder::api::bind_host within service template
The map_replace at [1] will replace the network name
with the local node IP address on the given network.

1. I7850d4dc8bf4db5f7ac6a6b53c1d900b561b4580

Change-Id: Ica064b5ffac61cebe2aae06d4f1d1d9e84258c10

--- a/puppet/services/cinder-api.yaml
+++ b/puppet/services/cinder-api.yaml
@@ -78,5 +78,11 @@ outputs:
                 dport:
                   - 8776
                   - 13776
+            # NOTE: bind IP is found in Heat replacing the network name with the local node IP
+            # for the given network; replacement examples (eg. for internal_api):
+            # internal_api -> IP
+            # internal_api_uri -> [IP]
+            # internal_api_subnet - > IP/CIDR
+            cinder::api::bind_host: {get_param: [ServiceNetMap, CinderApiNetwork]}
       step_config: |
         include ::tripleo::profile::base::cinder::api
