--- a/puppet/services/cinder-volume.yaml
+++ b/puppet/services/cinder-volume.yaml
@@ -90,5 +90,15 @@ outputs:
             tripleo.cinder_volume.firewall_rules:
               '120 iscsi initiator':
                 dport: 3260
+            # NOTE: bind IP is found in Heat replacing the network name with the local node IP
+            # for the given network; replacement examples (eg. for internal_api):
+            # internal_api -> IP
+            # internal_api_uri -> [IP]
+            # internal_api_subnet - > IP/CIDR
+            tripleo::profile::base::cinder::volume::iscsi::cinder_iscsi_address:
+              str_replace:
+                template: "NETWORK_uri"
+                params:
+                  NETWORK: {get_param: [ServiceNetMap, CinderIscsiNetwork]}
       step_config: |
         include ::tripleo::profile::base::cinder::volume
