Rename NeutronServer to NeutronApi to align with ServiceNetMap
The new composable service name conflicts with the existing ServiceNetMap
naming, so align with NeutronApi since ServiceNetMap exists in current
released versions.

This is required so we can correctly generate the neutron_api_node_ips
list (needed by puppet-tripleo) based on the service_name.

Change-Id: Ic1d45cbaa77bc6ac9ca247c880a9845ca49905da
Partially-Implements: blueprint custom-roles

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -151,7 +151,10 @@ resource_registry:
   OS::TripleO::Services::NeutronDhcpAgent: puppet/services/neutron-dhcp.yaml
   OS::TripleO::Services::NeutronL3Agent: puppet/services/neutron-l3.yaml
   OS::TripleO::Services::NeutronMetadataAgent: puppet/services/neutron-metadata.yaml
-  OS::TripleO::Services::NeutronServer: puppet/services/neutron-server.yaml
+  # FIXME(shardy) the duplicate NeutronServer line can be removed when we've updated
+  # the multinode job ControllerServices after this patch merges
+  OS::TripleO::Services::NeutronServer: puppet/services/neutron-api.yaml
+  OS::TripleO::Services::NeutronApi: puppet/services/neutron-api.yaml
   OS::TripleO::Services::NeutronCorePlugin: puppet/services/neutron-plugin-ml2.yaml
   # can be the same as NeutronCorePlugin but some vendors install different
   # things where VMs run
