--- a/puppet/services/neutron-api.yaml
+++ b/puppet/services/neutron-api.yaml
@@ -47,7 +47,7 @@ outputs:
   role_data:
     description: Role data for the Neutron Server agent service.
     value:
-      service_name: neutron_server
+      service_name: neutron_api
       config_settings:
         map_merge:
           - get_attr: [NeutronBase, role_data, config_settings]
