--- a/puppet/services/ceph-base.yaml
+++ b/puppet/services/ceph-base.yaml
@@ -20,9 +20,6 @@ parameters:
   CephClusterFSID:
     type: string
     description: The Ceph cluster FSID. Must be a UUID.
-  CephIPv6:
-    default: False
-    type: boolean
   CinderRbdPoolName:
     default: volumes
     type: string
@@ -72,7 +69,6 @@ outputs:
     value:
       service_name: ceph_base
       config_settings:
-        tripleo::profile::base::ceph::ceph_ipv6: {get_param: CephIPv6}
         tripleo::profile::base::ceph::enable_ceph_storage: {get_param: ControllerEnableCephStorage}
         ceph::profile::params::osd_pool_default_min_size: 1
         ceph::profile::params::osds: {/srv/data: {}}
@@ -93,8 +89,8 @@ outputs:
           str_replace:
             template: "NETWORK_subnet"
             params:
-              NETWORK: {get_param: [ServiceNetMap, CephPublicNetwork]}
-        ceph::profile::params::public_addr: {get_param: [ServiceNetMap, CephPublicNetwork]}
+              NETWORK: {get_param: [ServiceNetMap, CephMonNetwork]}
+        ceph::profile::params::public_addr: {get_param: [ServiceNetMap, CephMonNetwork]}
         ceph::profile::params::client_keys:
           str_replace:
             template: "{
