Generate composable service node_names lists
Some puppet interfaces require a comma separated list of hostnames
where a service is running, so generate it in a similar way to th
service ips.

Change-Id: Icdf5d993d089dc94035194bdbd52299fcbc793be
Partially-Implements: blueprint custom-roles

--- a/network/ports/net_ip_list_map.yaml
+++ b/network/ports/net_ip_list_map.yaml
@@ -28,6 +28,9 @@ parameters:
   ServiceNetMap:
     default: {}
     type: json
+  ServiceHostnameList:
+    default: []
+    type: comma_delimited_list
 
 outputs:
   net_ip_map:
@@ -71,3 +74,13 @@ outputs:
                   storage_mgmt: {get_param: StorageMgmtIpList}
                   tenant: {get_param: TenantIpList}
                   management: {get_param: ManagementIpList}
+  service_hostnames:
+    description: >
+      Map of enabled services to a list of hostnames where they're running
+    value:
+      map_merge:
+        repeat:
+          template:
+            SERVICE_node_names: {get_param: ServiceHostnameList}
+          for_each:
+              SERVICE: {get_param: EnabledServices}
