--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -12,6 +12,8 @@ parameters:
     type: comma_delimited_list
   service_ips:
     type: json
+  service_node_names:
+    type: json
   controller_names:
     type: comma_delimited_list
   rabbit_node_ips:
@@ -21,8 +23,6 @@ parameters:
   keystone_public_api_node_ips:
     type: comma_delimited_list
   keystone_admin_api_node_ips:
-    type: comma_delimited_list
-  ceph_mon_node_names:
     type: comma_delimited_list
   DeployIdentifier:
     type: string
@@ -76,15 +76,12 @@ resources:
                             str_split: [',', {get_param: enabled_services}]
                   # provides a mapping of service_name_ips to a list of IPs
                   - {get_param: service_ips}
+                  - {get_param: service_node_names}
                   - controller_node_ips:
                       list_join:
                       - ','
                       - {get_param: controller_ips}
                     controller_node_names:
-                      list_join:
-                      - ','
-                      - {get_param: controller_names}
-                    galera_node_names:
                       list_join:
                       - ','
                       - {get_param: controller_names}
@@ -120,10 +117,6 @@ resources:
                             list_join:
                             - "','"
                             - {get_param: keystone_admin_api_node_ips}
-                    tripleo::profile::base::ceph::ceph_mon_initial_members:
-                      list_join:
-                      - ','
-                      - {get_param: ceph_mon_node_names}
                     # NOTE(gfidente): interpolation with %{} in the
                     # hieradata file can't be used as it returns string
                     ceilometer::rabbit_hosts: *rabbit_nodes_array
